tests/miniJava/neg/006901_mutation.MiniJava
Main java { public static void Main ( String [ ] java ) { { } } }
